fix padding on mobile

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -2398,9 +2398,7 @@ footer {
 
 
 @media (max-width: 780px) {
-  #home {
-    padding: 10em 1em 1em 1em;
-  }
+
   .tagline {
     display: none !important;
   }
